move slots to top. fix layout issues

--- a/css/plae-chef.css
+++ b/css/plae-chef.css
@@ -329,7 +329,7 @@ button#edit {
       opacity: 1;
       display: inline-block;
       margin-bottom: 10px;
-      margin-left: 263px;
+      margin-left: 430px;
         top: 470px;
         border-radius: 5px;
         -webkit-border-radius: 5px;
@@ -376,7 +376,7 @@ button#edit {
         opacity: 1;
         display: inline-block;
         margin-bottom: 10px;
-        margin-left: 263px;
+        margin-left: 430px;
         top: 468px;
         background: #ffffff;
 /*        box-shadow:inset 0 1px 0 rgba(255,255,255,.6), 0 22px 70px 4px rgba(0,0,0,0.56), 0 0 0 1px rgba(0, 0, 0, 0.3);
